--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -19567,3 +19567,21 @@
 	ad_tools = "ADG"
 }
 
+@ARTICLE{
+	   Hovland2001Pso,
+	author = "Hovland, Paul D. and McInnes, Lois C.",
+	title = "Parallel simulation of compressible flow using automatic differentiation and PETSc",
+	journal = "Parallel Comput.",
+	volume = "27",
+	number = "4",
+	year = "2001",
+	issn = "0167-8191",
+	pages = "503--519",
+	doi = "http://dx.doi.org/10.1016/S0167-8191(00)00074-0",
+	publisher = "Elsevier Science Publishers B. V.",
+	address = "Amsterdam, The Netherlands, The Netherlands",
+	ad_area = "Computational Fluid Dynamics",
+	ad_tools = "ADIFOR",
+	ad_theotech = "Jacobian-vector product"
+}
+
