adjusted for format flag changes and preprocessing in openad script

--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -19103,12 +19103,14 @@
 
 @INPROCEEDINGS{
 	   Utke2009TAM,
-	author = "Jean Utke and Laurent Hasco{\"e}t and Chris Hill and Paul Hovland and Uwe
-	   Naumann",
+	author = "Jean Utke and Laurent Hasco{\"e}t and Patrick Heimbach and Chris Hill and
+	   Paul Hovland and Uwe Naumann",
 	title = "Toward Adjoinable {MPI}",
-	note = "submitted to PDSEC-09",
+	booktitle = "Proceedings of the 10th IEEE International Workshop on Parallel and Distributed
+	   Scientific and Engineering, PDSEC-09",
 	year = "2009",
 	location = "Rome, Italy",
+	doi = "http://doi.ieeecomputersociety.org/10.1109/IPDPS.2009.5161165",
 	ad_theotech = "Adjoint, Parallelism",
 	ad_tools = "OpenAD"
 }
